--- a/templates/base.html
+++ b/templates/base.html
@@ -35,14 +35,14 @@
 				<div class="login_btn fl">
 					欢迎您：<em>{{ user.username }}</em>
 					<span>|</span>
-					<a href="{% url 'users:logout' %}">注销</a>
+					<a href="{% url 'goods:index' %}">注销</a>
 				</div>
                 {% else %}
 
 				<div class="login_btn fl">
-					<a href='login'>登录</a>
+					<a href={% url 'users:login' %}>登录</a>
 					<span>|</span>
-					<a href="register.html">注册</a>
+					<a href={% url 'users:register' %}>注册</a>
 				</div>
                 {% endif %}
 
