--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 {% load staticfiles %}
 {% block body %}
 
+{#    首页全部商品兰#}
     <div class="navbar_con">
 		<div class="navbar">
 			<h1 class="fl">全部商品分类</h1>
@@ -16,25 +17,27 @@
 		</div>
 	</div>
 
+{#    显示商品类别#}
     <div class="center_con clearfix">
 		<ul class="subnav fl">
-            {% for foo in gategorise %}
+            {% for foo in categorise %}
                 <li><a href="#model0"+{{forloop.counter }} class={{  foo.logo }}>{{  foo.name }}</a></li>
             {% endfor %}
 
-
+        {#显示轮播商品#}
 		</ul>
 		<div class="slide fl">
 			<ul class="slide_pics">
                 {% for foo in slide %}
                     <li><img src= "{{ foo.image.url }}"  alt="幻灯片"></li>
                 {% endfor %}
-
 			</ul>
 			<div class="prev"></div>
 			<div class="next"></div>
 			<ul class="points"></ul>
 		</div>
+
+{#        显示促销活动#}
 		<div class="adv fl">
             {% for foo in promotion %}
                 <a href="#"><img src="{{ foo.image.url }}"></a>
@@ -42,33 +45,36 @@
 
 		</div>
 	</div>
-    {% for foo in gategorise %}
+
+{#    一个分类#}
+    {% for foo in categorise %}
     <div class="list_model">
 		<div class="list_title clearfix">
 			<h3 class="fl" id="model0{{ forloop.counter }}">{{ foo.name }}</h3>
 			<div class="subtitle fl">
 				<span>|</span>
 
+{#                显示文字商品#}
                 {% for text_sku in foo.text_skus %}
-                    <a href="#">{{ text_sku.sku.name }}</a>
+                    <a href="{% url 'goods:detail' text_sku.sku.id %}">{{ text_sku.sku.name }}</a>
                 {% endfor %}
 
 			</div>
-			<a href="#" class="goods_more fr" id="fruit_more">查看更多 ></a>
+			<a href="{% url 'goods:list' foo.id '1' %}" class="goods_more fr" id="fruit_more">查看更多 ></a>
 		</div>
 
 
 
-
+{#          显示图片商品#}
 		<div class="goods_con clearfix">
 			<div class="goods_banner fl"><img src="{{ foo.image.url }}"></div>
 			<ul class="goods_list fl">
 
                 {% for imgs_sku in foo.imgs_skus %}
                     <li>
-                        <h4><a href="#">{{ imgs_sku.sku.name }}</a></h4>
-                        <a href="#"><img src="{{ imgs_sku.sku.default_image.url}}"></a>
-                        <div class="prize">{{ imgs_sku.sku.print }}</div>
+                        <h4><a href={% url 'goods:detail' imgs_sku.sku.id %}>{{ imgs_sku.sku.name }}</a></h4>
+                        <a href={% url 'goods:detail' imgs_sku.sku.id %}><img src="{{ imgs_sku.sku.default_image.url}}"></a>
+                        <div class="prize">{{ imgs_sku.sku.price }}</div>
                     </li>
                 {% endfor %}
 
@@ -78,24 +84,6 @@
 	</div>
 
     {% endfor %}
-{% block bottom_js %}
-    <script type="text/javascript" src="js/slideshow.js"></script>
-	<script type="text/javascript">
-		BCSlideshow('focuspic');
-		var oFruit = document.getElementById('fruit_more');
-		var oShownum = document.getElementById('show_count');
 
-		var hasorder = localStorage.getItem('order_finish');
-
-		if(hasorder)
-		{
-			oShownum.innerHTML = '2';
-		}
-
-		oFruit.onclick = function(){
-			window.location.href = 'list.html';
-		}
-	</script>
-{% endblock %}
 
 {% endblock %}
