--- a/templates/user_center_info.html
+++ b/templates/user_center_info.html
@@ -14,24 +14,20 @@
                 <h3 class="common_title2">最近浏览</h3>
 				<div class="has_view_list">
 					<ul class="goods_type_list clearfix fr">
-				<li class="fl">
-					<a href="detail.html"><img src={% static "images/goods/goods002.jpg" %}></a>
-					<h4><a href="detail.html">大兴大棚草莓</a></h4>
-					<div class="operate">
-						<span class="prize">￥16.80</span>
-						<span class="unit">16.80/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-                        <li class="fl">
-					<a href="detail.html"><img src={% static "images/goods/goods002.jpg" %}></a>
-					<h4><a href="detail.html">大兴大棚草莓</a></h4>
-					<div class="operate">
-						<span class="prize">￥16.80</span>
-						<span class="unit">16.80/500g</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
+
+                        {% for sku in skus %}
+                            <li class="fl">
+                                <a href="{% url 'goods:detail' sku.id %}"><img src={{ sku.default_image.url }}></a>
+                                <h4><a href="{% url 'goods:detail' sku.id %}">{{ sku.name }}</a></h4>
+                                <div class="operate ">
+                                    <span class="prize">￥{{ sku.price }}</span>
+                                    <span class="unit">{{ sku.price }}/{{ sku.unit }}</span>
+                                    <a href="#" class="add_goods" title="加入购物车"></a>
+                                </div>
+                            </li>
+                        {% endfor %}
+
+
 
 
 				</div>
